--- a/src/App.scss
+++ b/src/App.scss
@@ -69,6 +69,7 @@ body {
   display: flex;
   align-items: center;
   flex-direction: column;
+  margin-top: 50px;
 
   &__loader {
     border: 8px solid transparent;
